More refactoring Remove dead code for the impossible case of (Model.candidate == null && !Model.gameOver()). Add Model.playerLost() method containing repeated code from Model.updateTime() and Model.selectCandidate(). Add more comments and redo some whitespacing to make improve organization of code. Fix cursor stuck in 'zoom' or 'grabbing' when mouse events are over. Change color of second player to 'royalblue'. Ensure that the player colors and initial player names always match the HTML and CSS values.

--- a/geowar.css
+++ b/geowar.css
@@ -119,7 +119,7 @@ article {
 }
 
 #playername1 {
-	color: blue;
+	color: royalblue;
 }
 
 #overlay {
